docs: avoid fixed table width columns for better mobile view
The columns were much too wide on mobile view

--- a/static/docs.css
+++ b/static/docs.css
@@ -3574,3 +3574,7 @@
     width: 80%; }
   .app-header .govuk-header__content {
     width: 20%; } }
+
+.nowrap {
+  white-space: nowrap;
+}
